2007-06-10  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via.man:
	* unichrome/via_driver.c: (VIAPreInit):

	Move reading of the VideoRAM option to after X has parsed the
	config file.  Also put the chipset and revision print statements
	together and at the beginning.  Plus several small layout tweaks.

2007-06-06  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_driver.c:

	Removed the chipset option definitions that aren't in
	trunk yet.

2007-06-06  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_driver.c:
	* unichrome/via_driver.h:
	* unichrome/via.man:

	Added per-chipset option defaults.  This should allow the
	driver to work out of the box with almost all hardware and
	xorg.conf configurations.

2007-05-23 Jon Nettleton <jon-dot-nettleton-at-gmail-dot-com> 

	* unichrome/via.h:

	Remove version check for older version of Xorg.  This is 
	really not necessary anymore, and was causing some breakage
	with xorg-server's new version numbering.

2007-05-18 Xavier Bachelot <xavier-at-bachelot-dot-org> 

	* libxvmc/Makefile.am:
	* libxvmc/viaXvMC.c: (XvMCCreateContext):

	Backport 2 fixes from Xorg tree.
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=362e03a38682bfcf366242c53444fa36b6052794
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=3cd7dac2b5a1c4bfb66bd1b67904d72dc08cbd0e

2007-04-14  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_id.c: (ViaDoubleCheckCLE266Revision),
	(ViaCheckCardId):

	VN -> VM, message tweaks, and trailing white space fixes.

2007-03-04  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via.man:

	Textual tweaks and options ordered alphabetically.

2007-02-16  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_accel.c: (viaSetClippingRectangle),
	(viaAccelSolidHelper), (viaAccelCopyHelper),
	(viaSubsequentMono8x8PatternFillRect),