@@ -1036,9 +1036,9 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
 	    from = xf86GetOptValInteger(VIAOptions, OPTION_EXA_SCRATCH_SIZE, 
 					&pVia->exaScratchSize) ? 
 		X_CONFIG : X_DEFAULT;
-	    xf86DrvMsg( pScrn->scrnIndex, from,
-			"EXA scratch area size is %dkB.\n", 
-			pVia->exaScratchSize );
+            xf86DrvMsg(pScrn->scrnIndex, from,
+                       "EXA scratch area size is %d kB.\n", 
+                       pVia->exaScratchSize);
 	}
     }
 #endif /* VIA_HAVE_EXA */
@@ -1139,19 +1139,19 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
 				&pVia->maxDriSize)
 	? X_CONFIG : X_DEFAULT;	
     if (pVia->maxDriSize > 0)
-	xf86DrvMsg( pScrn->scrnIndex, from,
-		    "Will impose a %dkB limit on video-ram set aside for DRI.\n", 
-		    pVia->maxDriSize );
+	xf86DrvMsg(pScrn->scrnIndex, from,
+                   "Will impose a %d kB limit on video RAM reserved for DRI.\n", 
+                   pVia->maxDriSize);
     else
-	xf86DrvMsg( pScrn->scrnIndex, from, 
-		    "Will not impose a limit on video-ram set aside for DRI.\n");
+	xf86DrvMsg(pScrn->scrnIndex, from,
+                   "Will not impose a limit on video RAM reserved for DRI.\n");
 
     //pVia->agpMem = AGP_SIZE / 1024;
     from = xf86GetOptValInteger(VIAOptions, OPTION_AGPMEM, 
 				&pVia->agpMem)
 	? X_CONFIG : X_DEFAULT;	
     xf86DrvMsg(pScrn->scrnIndex, from, 
-	       "Will try to allocate %dkB of AGP memory.\n", 
+	       "Will try to allocate %d kB of AGP memory.\n", 
 	       pVia->agpMem );
 
     /* ActiveDevice Option for device selection */
@@ -1331,13 +1331,12 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
     }
     hwp = VGAHWPTR(pScrn);
 
-
 #ifdef HAVE_DEBUG
     //pVia->PrintVGARegs = FALSE;
     from = xf86GetOptValBool(VIAOptions, OPTION_PRINTVGAREGS, 
 			     &pVia->PrintVGARegs)
 	? X_CONFIG : X_DEFAULT;
-    xf86DrvMsg(pScrn->scrnIndex, from, "Will %sprint VGA Registers.\n",
+    xf86DrvMsg(pScrn->scrnIndex, from, "Will %sprint VGA registers.\n",
 	       pVia->PrintVGARegs ? "" : "not ");
     if (pVia->PrintVGARegs)
 	ViaVgahwPrint(VGAHWPTR(pScrn)); /* Do this as early as possible */
@@ -1349,44 +1348,45 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
 	       pVia->I2CScan ? "" : "not ");
 #endif /* HAVE_DEBUG */
 
-    ViaCheckCardId(pScrn);   
     xf86DrvMsg(pScrn->scrnIndex, X_INFO, 
 	       "...Finished parsing config file options.\n");
 
+    ViaCheckCardId(pScrn);   
 
-    /* read memory bandwidth from registers */
+    /* Read memory bandwidth from registers */
     pVia->MemClk = hwp->readCrtc(hwp, 0x3D) >> 4;
-    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "Detected MemClk %d\n", pVia->MemClk));
+    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO,
+                     "Detected MemClk %d\n", pVia->MemClk));
     if (pVia->MemClk >= VIA_MEM_END) {
-	xf86DrvMsg(pScrn->scrnIndex, X_WARNING, "Unknown Memory clock: %d\n", pVia->MemClk);
+	xf86DrvMsg(pScrn->scrnIndex, X_WARNING,
+                   "Unknown Memory clock: %d\n", pVia->MemClk);
 	pVia->MemClk = VIA_MEM_END - 1;
     }
     pBIOSInfo->Bandwidth = ViaGetMemoryBandwidth(pScrn);
 
     if (pBIOSInfo->TVType == TVTYPE_NONE) {
-        /* use jumper to determine TV Type */
-
+        /* Use jumper to determine TV type */
         if (hwp->readCrtc(hwp, 0x3B) & 0x02) {
             pBIOSInfo->TVType = TVTYPE_PAL;
-	    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "Detected TV Standard: PAL.\n"));
+	    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO,
+                             "Detected TV standard: PAL.\n"));
         }
         else {
             pBIOSInfo->TVType = TVTYPE_NTSC;
-	    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "Detected TV Standard: NTSC.\n"));
+	    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO,
+                             "Detected TV standard: NTSC.\n"));
         }
     }
 
-    {
-        Gamma zeros = {0.0, 0.0, 0.0};
-
-        if (!xf86SetGamma(pScrn, zeros)) {
-	    VIAFreeRec(pScrn);
-            return FALSE;
-        }
+    Gamma zeros = {0.0, 0.0, 0.0};
+    if (!xf86SetGamma(pScrn, zeros)) {
+        VIAFreeRec(pScrn);
+        return FALSE;
     }
 
-    /* Detect amount of installed RAM */
+    /* Detect amount of installed RAM if current value is no good. */
     if (pScrn->videoRam < 16384 || pScrn->videoRam > 65536) {
+        from = X_PROBED;
 	if(pVia->Chipset == VIA_CLE266) {
 	    bMemSize = hwp->readSeq(hwp, 0x34);
 	    if (!bMemSize) {
@@ -1402,11 +1402,14 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
 	else if (bMemSize > 0 && bMemSize < 31)
 	    pScrn->videoRam = bMemSize << 12;
 	else {
-	    xf86DrvMsg(pScrn->scrnIndex, X_WARNING,
-		       "Memory size detection failed: using 16MB.\n");
-	    pScrn->videoRam = 16 << 10;	/* Assume the basic 16MB */
+            from = X_DEFAULT;    
+            xf86DrvMsg(pScrn->scrnIndex, X_WARNING,
+                       "Memory size detection failed: using 16 MB.\n");
+            pScrn->videoRam = 16 << 10;
 	}
-    }
+        xf86DrvMsg(pScrn->scrnIndex, from,"Probed VideoRAM = %d kB\n",
+                   pScrn->videoRam);
+}
 
     /* Split FB for SAMM */
     /* FIXME: For now, split FB into two equal sections. This should
@@ -1427,8 +1430,6 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
     }
 
     pVia->videoRambytes = pScrn->videoRam << 10;
-    xf86DrvMsg(pScrn->scrnIndex, X_PROBED,"videoram =  %dk\n",
-               pScrn->videoRam);
 
     if (!xf86LoadSubModule(pScrn, "i2c")) {
         VIAFreeRec(pScrn);
@@ -1464,8 +1465,8 @@ static Bool VIAPreInit(ScrnInfoPtr pScrn, int flags)
     if (pBIOSInfo->PanelActive && ((pVia->Chipset == VIA_K8M800) ||
 				   (pVia->Chipset == VIA_PM800) ||
                     (pVia->Chipset == VIA_VM800))) {
-	xf86DrvMsg(pScrn->scrnIndex, X_WARNING, "Panel on K8M800, PM800 or VM800 is"
-		   " currently not supported.\n");
+	xf86DrvMsg(pScrn->scrnIndex, X_WARNING, "Panel on K8M800, PM800 or"
+                   " VM800 is currently not supported.\n");
 	xf86DrvMsg(pScrn->scrnIndex, X_WARNING, "Using VBE to set modes to"
 		   " work around this.\n");
 	pVia->useVBEModes = TRUE;
